styles/larger.css
@media screen and (min-width:700px){
.wrap {
  flex-direction: inline-block;
}
 
.options nav ul {
 display: flex;
 flex-direction: inline-block;
 margin-left: 20%;
 margin-right: 20%;
}

.title-c {
  margin-left: 20%;
  margin-right: 20%;
}

}

